--- a/playlistPage1.html
+++ b/playlistPage1.html
@@ -5,6 +5,19 @@
 		<link rel="stylesheet" type="text/css" href="playlist.css">
 	</head>
 	<body>
-
+        <div id="video_player_box">
+            <audio id="my_video"  autoplay>
+                <source src="Images/tester.mp4" type="video/mp4">
+            </audio>
+            <div id="video_controls_bar">
+                <div style=" margin-top: -20px; margin-left: -10px;">
+                    <input id="seekslider" type="range" min="0" max="100" value="0" steps="1">
+                </div>
+                <button id="playpausebtn"> &#9612 &#9612</button>
+                <span id="curtimetext"></span> / <span id="durtimetext"></span>
+                <button id="mutebtn">&#128266</button>
+                <input id="volumeslider" type="range" min="0" max="100" value="100" steps="1">
+            </div>
+        </div>
 	</body>
 </html>
