more minor design changes

--- a/playlistPage1.html
+++ b/playlistPage1.html
@@ -13,7 +13,7 @@
                 <div style=" margin-top: -20px; margin-left: -10px;">
                     <input id="seekslider" type="range" min="0" max="100" value="0" steps="1">
                 </div>
-                <button id="playpausebtn"> &#9612 &#9612</button>
+                <button id="playpausebtn">	&nbsp &#9612 &#9612</button>
                 <span id="curtimetext"></span> / <span id="durtimetext"></span>
                 <button id="mutebtn">&#128266</button>
                 <input id="volumeslider" type="range" min="0" max="100" value="100" steps="1">
