--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" ng-app="music">
 	<head>
-		<title>Homepage</title>
+		<title>Homepage!</title>
 		<link rel="stylesheet" type="text/css" href="mainPage.css">
 	</head>
 	<body>
