--- a/Playlists/playlistPage1.html
+++ b/Playlists/playlistPage1.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="playlist.css">
 	</head>
 	<body>
+        <section class="musicInfoBox"></section>
         <div id="video_player_box">
             <audio id="my_video"  autoplay>
                 <source src="Images/tester.mp4" type="video/mp4">
