playlist now functioning on click. can switch between playlists

--- a/Playlists/playlistPage1.html
+++ b/Playlists/playlistPage1.html
@@ -10,7 +10,25 @@
 </head>
 
 <body>
-    <section class="musicInfoBox"></section>
+    <section>
+        <a href="#">
+            <div id="genreBox1">
+                <h1>Hip-Hop</h1></div>
+        </a>
+        <a href="#">
+            <div id="genreBox2">
+                <h1>Rock</h1></div>
+        </a>
+        <a href="#">
+            <div id="genreBox3">
+                <h1>Pop</h1></div>
+        </a>
+        <a href="#">
+            <div id="genreBox4">
+                <h1>Country</h1></div>
+        </a>
+    </section>
+
     <div id="audioPlayer_player_box">
         <audio id="my_audioPlayer" autoplay>
 
