more small changes

--- a/Playlists/playlistPage1.html
+++ b/Playlists/playlistPage1.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>iVinyl : Always Bring the Concert with You</title>
-    <link rel="icon" type="image/png" href="../Images/logoTFavicon.png">
+    <link rel="icon" type="image/png" href="../Images/logoFavicon.png">
     <link rel="stylesheet" type="text/css" href="playlist.css">
     <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="playlist.js"></script>
@@ -12,7 +12,9 @@
 
 <body>
     <nav>
-        <a href="#"><img src="../Images/logoTitle.png"></a>
+        <a href="#">
+            <img src="../Images/logoTitle.png">
+        </a>
     </nav>
     <section>
         <a href="#">
