--- a/index.html
+++ b/index.html
@@ -6,5 +6,18 @@
 	</head>
 	<body>
 
+        <div class="genreBox1">
+            <p>ROCK</p>
+        </div>
+        <div class="genreBox2">
+            <p>COUNTRY</p>
+        </div>
+        <div class="genreBox3">
+            <p>HIP-HOP</p>
+        </div>
+        <div class="genreBox4">
+            <p>POP</p>
+        </div>
+
 	</body>
 </html>
