moved the files out of the playlist folder and removed the empty folder

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>iVinyl : Always Bring the Concert with You</title>
-    <link rel="icon" type="image/png" href="../Images/logoFavicon.png">
+    <link rel="icon" type="image/png" href="Images/logoFavicon.png">
     <link rel="stylesheet" type="text/css" href="playlist.css">
     <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="playlist.js"></script>
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <a href="#">
-            <img src="../Images/logoTitle.png">
+            <img src="Images/logoTitle.png">
         </a>
     </nav>
     <section>
