--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="music">
 
 <head>
-    <title>iVinyl : Always Bring the Concert with You</title>
+    <title>iVinyl : Always Bring the Concert with You!</title>
     <link rel="icon" type="image/png" href="Images/logoFavicon.png">
     <link rel="stylesheet" type="text/css" href="playlist.css">
     <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
