--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!-- Contributors: Alex Fresa, Hamilton Kirby, Matt Lineback, and Charles Williams-->
 <html lang="en" ng-app="music">
 
 <head>
